--- a/javascript_30/drum-kit-js/style.css
+++ b/javascript_30/drum-kit-js/style.css
@@ -1,6 +1,6 @@
 html {
   font-size: 10px;
-  background: url(http://i.imgur.com/b9r5sEL.jpg) bottom center;
+  background: url(https://i.ytimg.com/vi/ywncRWOESsc/hqdefault.jpg) bottom center;
   background-size: cover;
 }
 body,html {
